AX: AccessibilityNodeObject::textForLabelElement() doesn't follow AccName calculation rules https://bugs.webkit.org/show_bug.cgi?id=183661

Reviewed by Chris Fleizach.

Source/WebCore:

Have AccessibilityNodeObject::textForLabelElement() return the value from
accessibleNameForNode() instead of innerText(). The former falls back on
the latter if there is no author-provided accessible name.

Tests: accessibility/aria-label-on-label-element.html
       accessibility/label-with-pseudo-elements.html

* accessibility/AccessibilityNodeObject.cpp:
(WebCore::AccessibilityNodeObject::textForLabelElement const):
(WebCore::AccessibilityNodeObject::titleElementText const):

LayoutTests:

* accessibility/aria-label-on-label-element-expected.txt: Moved from Mac tests to shared tests.
* accessibility/aria-label-on-label-element.html: Moved from Mac tests to shared tests.
* accessibility/label-with-pseudo-elements-expected.txt: Added.
* accessibility/label-with-pseudo-elements.html: Added.
* platform/gtk/accessibility/aria-label-on-label-element-expected.txt: Added.
* platform/gtk/accessibility/label-with-pseudo-elements-expected.txt: Added.
* platform/mac/accessibility/label-with-pseudo-elements-expected.txt: Added.
* platform/win/accessibility/label-with-pseudo-elements-expected.txt: Added.


Canonical link: https://commits.webkit.org/199349@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@229682 268f45cc-cd09-0410-ab3c-d52691b4dbfc